--- a/dom/tests/mochitest/general/test_domWindowUtils_scrollXY.html
+++ b/dom/tests/mochitest/general/test_domWindowUtils_scrollXY.html
@@ -24,9 +24,12 @@
     }
 
     function testScrollXY() {
+      // Enable privileges so we can use nsIDOMWindowUtils interface
+      netscape.security.PrivilegeManager.enablePrivilege("UniversalXPConnect");
       let iframe = document.getElementById("iframe");
       let cwindow = iframe.contentWindow;
-      let domWindowUtils = SpecialPowers.getDOMWindowUtils(cwindow);
+      let domWindowUtils = cwindow.QueryInterface(Components.interfaces.nsIInterfaceRequestor)
+                                  .getInterface(Components.interfaces.nsIDOMWindowUtils);
 
       function checkGetScrollXYState(flush, vals, testName) {
         let scrollX = {}, scrollY = {};
@@ -61,7 +64,8 @@
     function testHiddenIframe() {
       let iframe = document.getElementById("hidden-iframe");
       let cwindow = iframe.contentWindow;
-      let domWindowUtils = SpecialPowers.getDOMWindowUtils(cwindow);
+      let domWindowUtils = cwindow.QueryInterface(Components.interfaces.nsIInterfaceRequestor)
+                                  .getInterface(Components.interfaces.nsIDOMWindowUtils);
 
       // make sure getScrollXY doesn't throw
       let scrollX = {}, scrollY = {};
