--- a/dom/tests/mochitest/general/test_domWindowUtils.html
+++ b/dom/tests/mochitest/general/test_domWindowUtils.html
@@ -25,7 +25,10 @@
 
 <script type="application/javascript;version=1.8">
 
-var domWindowUtils = SpecialPowers.getDOMWindowUtils(window);
+// Enable privileges so we can use nsIDOMWindowUtils interface
+netscape.security.PrivilegeManager.enablePrivilege("UniversalXPConnect");
+var domWindowUtils = window.QueryInterface(Components.interfaces.nsIInterfaceRequestor)
+                           .getInterface(Components.interfaces.nsIDOMWindowUtils);
 
 /*
   nsIDOMElement elementFromPoint(in long aX,
