--- a/dom/media/tests/mochitest/test_peerConnection_close.html
+++ b/dom/media/tests/mochitest/test_peerConnection_close.html
@@ -43,21 +43,23 @@
       is(pc.signalingState, "closed", "Final signalingState stays at 'closed'");
       is(pc.iceConnectionState, "closed", "Final iceConnectionState stays at 'closed'");
 
-      // TODO: according to the webrtc spec all of these should throw InvalidStateError's
-      //       instead they seem to throw simple Error's
-      SimpleTest.doesThrow(function() {
-        pc.setLocalDescription(
-          "Invalid Session Description",
-          function() {},
-          function() {})},
-        "setLocalDescription() on closed PC raised expected exception");
-
-      SimpleTest.doesThrow(function() {
-        pc.setRemoteDescription(
-          "Invalid Session Description",
-          function() {},
-          function() {})},
-        "setRemoteDescription() on closed PC raised expected exception");
+      // Due to a limitation in our WebIDL compiler that prevents overloads with
+      // both Promise and non-Promise return types, legacy APIs with callbacks
+      // are unable to continue to throw exceptions. Luckily the spec uses
+      // exceptions solely for "programming errors" so this should not hinder
+      // working code from working, which is the point of the legacy API. All
+      // new code should use the promise API.
+      //
+      // The legacy methods that no longer throw on programming errors like
+      // "invalid-on-close" are:
+      // - createOffer
+      // - createAnswer
+      // - setLocalDescription
+      // - setRemoteDescription
+      // - addIceCandidate
+      // - getStats
+      //
+      // Other methods are unaffected.
 
       SimpleTest.doesThrow(function() {
         pc.updateIce("Invalid RTC Configuration")},
@@ -74,11 +76,6 @@
       SimpleTest.doesThrow(function() {
         pc.createDataChannel({})},
         "createDataChannel() on closed PC raised expected exception");
-
-      // The spec says it has to throw, but it seems questionable why...
-      SimpleTest.doesThrow(function() {
-        pc.getStats()},
-        "getStats() on closed PC raised expected exception");
 
       SimpleTest.doesThrow(function() {
         pc.setIdentityProvider("Invalid Provider")},
