Backed out 20 changesets (bug 1576342, bug 1576341, bug 1576340, bug 1574112, bug 1575992, bug 1576349, bug 1576813, bug 1576338, bug 1576339, bug 1576017, bug 1575260, bug 1575918, bug 1576435, bug 1576434, bug 1576436, bug 1576240) for WPT failures on offset-anchor-interpolation.html
Backed out changeset 8feea1e30794 (bug 1576813)
Backed out changeset 79cce093d791 (bug 1574112)
Backed out changeset dae3c33acdf5 (bug 1574112)
Backed out changeset 9d6398342f22 (bug 1576349)
Backed out changeset 49123e2cb416 (bug 1576436)
Backed out changeset 08975decb9f4 (bug 1576435)
Backed out changeset b66b8fcafda5 (bug 1576434)
Backed out changeset 005ccc89d68f (bug 1576342)
Backed out changeset 03a962be155d (bug 1576341)
Backed out changeset 04bda0e23994 (bug 1576340)
Backed out changeset ab1744e08df8 (bug 1576339)
Backed out changeset 2b2ec2483110 (bug 1576338)
Backed out changeset 6e19b535159c (bug 1576240)
Backed out changeset ab15bb545725 (bug 1576240)
Backed out changeset a61cb494a0bf (bug 1575992)
Backed out changeset 8394d3fc54bc (bug 1575992)
Backed out changeset a73abcc509f7 (bug 1576017)
Backed out changeset 63c1975b2e0c (bug 1575260)
Backed out changeset 953372c50f37 (bug 1575918)
Backed out changeset 0d9178e91ea1 (bug 1575918)

--- a/testing/web-platform/tests/webxr/xrDevice_requestSession_optionalFeatures.https.html
+++ b/testing/web-platform/tests/webxr/xrDevice_requestSession_optionalFeatures.https.html
@@ -19,15 +19,9 @@
       }, TRACKED_IMMERSIVE_DEVICE, 'immersive-vr', {requiredFeatures: [], optionalFeatures: []});
 
     xr_session_promise_test(
-      "Tests requestSession ignores unknown strings in optionalFeatures",
+      "Tests requestSession ignores unknown optionalFeatures",
       (session) => {
         assert_not_equals(session, null);
       }, TRACKED_IMMERSIVE_DEVICE, 'immersive-vr', {optionalFeatures: ['unicorns']});
-
-    xr_session_promise_test(
-      "Tests requestSession ignores unknown objects in optionalFeatures",
-      (session) => {
-        assert_not_equals(session, null);
-      }, TRACKED_IMMERSIVE_DEVICE, 'immersive-vr', {optionalFeatures: [{ unicorns: "please" }]});
   </script>
 </body>
