--- a/dom/base/test/chrome/test_bug1339722.html
+++ b/dom/base/test/chrome/test_bug1339722.html
@@ -13,7 +13,7 @@ https://bugzilla.mozilla.org/show_bug.cgi?id=1339722
 
   /**
    * Test for Bug 1339722
-   * 1. Wait for "http-on-modify-request" for the iframe load.
+   * 1. Wait for "http-on-useragent-request" for the iframe load.
    * 2. In the observer, access it's window proxy to trigger DOMWindowCreated.
    * 3. In the event handler, delete the iframe so that the frameloader would be
    *    destoryed in the middle of ReallyStartLoading.
@@ -22,10 +22,7 @@ https://bugzilla.mozilla.org/show_bug.cgi?id=1339722
 
   const {Services} = ChromeUtils.import("resource://gre/modules/Services.jsm");
 
-  // This topic used to be http-on-useragent-request, but that got removed in
-  // bug 1513574. on-modify-request is called around the same time, and should
-  // behave similarly.
-  const TOPIC = "http-on-modify-request";
+  const TOPIC = "http-on-useragent-request";
   let win;
   Services.obs.addObserver({
     observe(subject, topic, data) {
