Bug 1588999 - Rename ObjectClient to ObjectFront. r=ochameau.
The object-client.js file is now a proper protocol.js front,
but is still named after a client.
This is confusing, so we rename and move the file next to other
fronts, and update all consumers to the new terminology.

Differential Revision: https://phabricator.services.mozilla.com/D49878

--- a/devtools/shared/webconsole/test/test_object_actor.html
+++ b/devtools/shared/webconsole/test/test_object_actor.html
@@ -152,7 +152,7 @@ function onConsoleCall(state, aPacket) {
   let args = aPacket.message.arguments;
   onProperties = onProperties.bind(null, state);
 
-  let client = new ObjectClient(state.dbgClient, args[1]);
+  let client = new ObjectFront(state.dbgClient, args[1]);
   client.getPrototypeAndProperties().then(onProperties);
 }
 
