Bug 1589836 - Add permanent search icon in front of the megabar. r=adw
Differential Revision: https://phabricator.services.mozilla.com/D49826

--- a/browser/base/content/browser.xhtml
+++ b/browser/base/content/browser.xhtml
@@ -864,6 +864,7 @@
             <hbox id="urlbar-input-container"
                   flex="1"
                   pageproxystate="invalid">
+              <box id="urlbar-search-icon"/>
               <!-- Use onclick instead of normal popup= syntax since the popup
                    code fires onmousedown, and hence eats our favicon drag events. -->
               <box id="tracking-protection-icon-container" align="center"
