Backed out 4 changesets (bug 1849301) for causing failures on browser_computed_matched-selectors_01.js. CLOSED TREE
Backed out changeset 9f2a5b983a7a (bug 1849301)
Backed out changeset e5181454f4c3 (bug 1849301)
Backed out changeset 71266152b915 (bug 1849301)
Backed out changeset e96c371d51ac (bug 1849301)

--- a/devtools/client/inspector/index.xhtml
+++ b/devtools/client/inspector/index.xhtml
@@ -264,12 +264,12 @@
 
           <div id="computed-container" role="document">
             <div id="computed-container-focusable" tabindex="-1">
-              <ul
+              <div
                 id="computed-property-container"
                 class="devtools-monospace"
                 tabindex="0"
                 dir="ltr"
-              ></ul>
+              ></div>
               <div
                 id="computed-no-results"
                 class="devtools-sidepanel-no-result"
