--- a/gfx/layers/apz/test/mochitest/helper_zoomToFocusedInput_iframe.html
+++ b/gfx/layers/apz/test/mochitest/helper_zoomToFocusedInput_iframe.html
@@ -9,92 +9,55 @@
   </head>
 <body>
 <div style="height: 8000px;">ABC</div>
-<iframe style="height: 30em;"></iframe>
+<iframe style="height: 30em;" src="helper_iframe_textarea.html"></iframe>
 </div>
 <!-- Leave additional room below the element so it can be scrolled to the center -->
 <div style="height: 1000px;">ABC</div>
 <script type="application/javascript">
 async function test() {
-  let isCrossOrigin = (location.search == "?cross-origin");
-  let iframeURL =
-    SimpleTest.getTestFileURL("helper_iframe_textarea.html")
-  if (isCrossOrigin) {
-    iframeURL.replace(window.location.origin, "https://example.com/");
-  }
+  let utils = SpecialPowers.getDOMWindowUtils(window);
 
   let iframe = document.querySelector("iframe");
-  const iframeLoadPromise = promiseOneEvent(iframe, "load", null);
-  iframe.src = iframeURL;
-  await iframeLoadPromise;
+  let textarea = iframe.contentDocument.querySelector("textarea");
+  for (let i = 0; i < 20; i++) {
+    textarea.value += "foo\n";
+  }
 
-  await SpecialPowers.spawn(iframe, [], async () => {
-    await content.wrappedJSObject.waitUntilApzStable();
-  });
+  let win = iframe.contentWindow;
 
   iframe.focus();
+  textarea.focus();
 
-  await SpecialPowers.spawn(iframe, [], async () => {
-    let textarea = content.document.querySelector("textarea");
-    for (let i = 0; i < 20; i++) {
-      textarea.value += "foo\n";
-    }
-    textarea.focus();
-  });
+  await waitToClearOutAnyPotentialScrolls(win);
 
-  await SpecialPowers.spawn(iframe, [], async () => {
-    await content.wrappedJSObject.waitToClearOutAnyPotentialScrolls(content.window);
-  });
-
-  await SpecialPowers.spawn(iframe, [], async () => {
-    let textarea = content.document.querySelector("textarea");
-    textarea.setSelectionRange(0, 0);
-  });
-
+  textarea.setSelectionRange(0, 0);
   window.scrollTo(0, 0);
-  await SpecialPowers.spawn(iframe, [], async () => {
-    await content.wrappedJSObject.waitToClearOutAnyPotentialScrolls(content.window);
-  });
+  await waitToClearOutAnyPotentialScrolls(win);
   is(0, window.scrollY, "scroll position is reset");
 
   let transformEndPromise = promiseTransformEnd();
-  await SpecialPowers.spawn(iframe, [], async () => {
-    SpecialPowers.DOMWindowUtils.zoomToFocusedInput();
-  });
+  utils.zoomToFocusedInput();
   await promiseApzFlushedRepaints();
 
   ok(window.scrollY > 0, "scroll position isn't top");
-  let iframeWindowScrollY = await SpecialPowers.spawn(iframe, [], () => {
-    return content.window.scrollY;
-  });
-  ok(iframeWindowScrollY > 0, "scroll position into iframe isn't top");
+  ok(iframe.contentWindow.scrollY > 0, "scroll position into iframe isn't top");
   let prevPosY = window.scrollY;
 
   await transformEndPromise;
   await promiseApzFlushedRepaints();
 
   window.scrollTo(0, 0);
-  await SpecialPowers.spawn(iframe, [], async () => {
-    await content.wrappedJSObject.waitToClearOutAnyPotentialScrolls(content.window);
-  });
+  await waitToClearOutAnyPotentialScrolls(win);
   is(0, window.scrollY, "scroll position is reset");
 
-  SpecialPowers.spawn(iframe, [], async () => {
-    let textarea = content.document.querySelector("textarea");
-    textarea.setSelectionRange(textarea.value.length, textarea.value.length);
-  });
-
+  textarea.setSelectionRange(textarea.value.length, textarea.value.length);
   transformEndPromise = promiseTransformEnd();
-  await SpecialPowers.spawn(iframe, [], async () => {
-    SpecialPowers.DOMWindowUtils.zoomToFocusedInput();
-  });
+  utils.zoomToFocusedInput();
   await transformEndPromise;
   await promiseApzFlushedRepaints();
 
   ok(window.scrollY > 0, "scroll position isn't top");
-  iframeWindowScrollY = await SpecialPowers.spawn(iframe, [], () => {
-    return content.window.scrollY;
-  });
-  ok(iframeWindowScrollY > 0, "scroll position into iframe isn't top");
+  ok(iframe.contentWindow.scrollY > 0, "scroll position into iframe isn't top");
   ok(prevPosY < window.scrollY,
      "scroll position is different from first line of textarea");
 }
