Bug 1850819 - Let "Don't translate new lines for IME" ride into early beta. r=masayuki
This lets bug 1838355 (a5a62ea631e5) ride into early beta.

Differential Revision: https://phabricator.services.mozilla.com/D187141

--- a/widget/tests/window_composition_text_querycontent.xhtml
+++ b/widget/tests/window_composition_text_querycontent.xhtml
@@ -187,8 +187,8 @@ function getHTMLEditorIMESupport(aWindow)
 const kIsWin = (navigator.platform.indexOf("Win") == 0);
 const kIsMac = (navigator.platform.indexOf("Mac") == 0);
 
-const kLFLen = (kIsWin && !AppConstants.NIGHTLY_BUILD) ? 2 : 1;
-const kLF = (kIsWin && !AppConstants.NIGHTLY_BUILD) ? "\r\n" : "\n";
+const kLFLen = (kIsWin && !AppConstants.EARLY_BETA_OR_EARLIER) ? 2 : 1;
+const kLF = (kIsWin && !AppConstants.EARLY_BETA_OR_EARLIER) ? "\r\n" : "\n";
 
 function checkQueryContentResult(aResult, aMessage)
 {
