Bug 1847280 - Export more MathML reftests to WPT. r=emilio
* link-1: This is testing <mtext href> link render specially. href is
  not in the current MathML Core spec.

* negative-mspace-1: This is testing negative values for mspace@width but
  MathML Core just currently maps it to the width property which does not
  accept negative values.

* mathml-type-supported: This verify application/mathml+xml is recognized
  by the browser and will open a page with such a MIME type. Such a
  behavior is not specified in MathML Core.

* web-platform/tests/mathml/presentation-markup/mrow/mphantom-001.html:
  Copy and tweak from existing merror-001.html to check style and size
  of the <mphantom> element.

* menclose-in-mphantom: Remove since that's now covered by the new
  mphantom-001.html plus existing visibility-004.tentative.html

* mphantom-1: Remove since that's covered by the new mphantom-001.html
  plus exisiting visibility-00{1,2,3}.html

* mphantom-2: Remove since that's covered by the new mphantom-001.html
  and other more advanced tests for mrow-like elements.

* non-spacing-accent-1: This is testing a valid MathML Core behavior
  (assuming system fonts can render U+0302 COMBINING CIRCUMFLEX ACCENT)
  so upstream it to WPT.

* overbar-width-1, underbar-width-1: Ditto, and there is no need to
  assume system fonts have the the overbar/underbar char since there is
  a hiding div.

* stretchy-underbar-1: This test assumes that the underbar stretches
  but U+332 is not stretchy by default in MathML Core's operator
  dictionary, so add an explicit attribute. Probably the original test
  makes more assumption (system font, etc) so don't touch it too much.
  Even if the operator does not stretch, it would still pass anyway.

Differential Revision: https://phabricator.services.mozilla.com/D185466

--- a/testing/web-platform/tests/mathml/presentation-markup/operators/underbar-width-1.xhtml
+++ b/testing/web-platform/tests/mathml/presentation-markup/operators/underbar-width-1.xhtml
@@ -1,6 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>Check width of stretchy OverBar</title>
+    <link rel="match" href="overbar-width-1-ref.xhtml"/>
+    <link rel="help" href="https://bugzilla.mozilla.org/show_bug.cgi?id=428863"/>
     <style type="text/css">
       html { background-color: grey; }
       div { display: inline-block;
@@ -16,8 +18,8 @@
   <div>
     <math xmlns="http://www.w3.org/1998/Math/MathML">
       <munder>
-	<mn>1</mn>
-	<mo>&#x332;</mo>
+        <mn>1</mn>
+        <mo>&#x332;</mo>
       </munder>
     </math>
   </div>
