Backed out changeset 699800af0474 (bug 1851099) for causing linting failures on MediaSessionTest.kt. CLOSED TREE

--- a/dom/media/mediasession/test/test_setactionhandler.html
+++ b/dom/media/mediasession/test/test_setactionhandler.html
@@ -23,6 +23,8 @@ const ACTIONS = [
 ];
 
 (async function testSetActionHandler() {
+  await setupPreference();
+
   for (const action of ACTIONS) {
     info(`Test setActionHandler for '${action}'`);
     generateAction(action);
@@ -43,6 +45,12 @@ const ACTIONS = [
 
   SimpleTest.finish();
 })();
+
+function setupPreference() {
+  return SpecialPowers.pushPrefEnv({"set": [
+    ["dom.media.mediasession.enabled", true],
+  ]});
+}
 
 function generateAction(action) {
   let details = generateActionDetails(action);
