--- a/dom/media/mediasession/test/test_trigger_actionhanlder.html
+++ b/dom/media/mediasession/test/test_trigger_actionhanlder.html
@@ -32,6 +32,7 @@ const testCases = [
 SimpleTest.waitForExplicitFinish();
 
 SpecialPowers.pushPrefEnv({"set": [
+  ["dom.media.mediasession.enabled", true],
   ["media.mediacontrol.testingevents.enabled", true],
 ]}, startTest());
 
