Bug 1850827 - Simplify how we draw window decorations. r=stransky,rmader,desktop-theme-reviewers,dao
This makes the rounded bottom corners work on X11, and makes the top
corner drawing less insane.

Differential Revision: https://phabricator.services.mozilla.com/D187345

--- a/browser/base/content/navigator-toolbox.inc.xhtml
+++ b/browser/base/content/navigator-toolbox.inc.xhtml
@@ -3,9 +3,10 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 <!--
-  GTK needs to draw behind the lightweight theme toolbox backgrounds, thus the extra box.
-  Also this box allows a negative margin-top to slide the toolbox off screen in
+  This box allows a negative margin-top to slide the toolbox off screen in
   fullscreen layout.
+  TODO(emilio, bug 1851651): The original use-case for this is gone, try to
+  remove this.
 -->
 <box id="navigator-toolbox-background">
 <toolbox id="navigator-toolbox" flex="1">
