Bug 1837696 - Expose shopping strings to localization r=shopping-reviewers,fluent-reviewers,flod,Gijs
Differential Revision: https://phabricator.services.mozilla.com/D186574

--- a/browser/base/content/browser.xhtml
+++ b/browser/base/content/browser.xhtml
@@ -88,6 +88,7 @@
   <link rel="localization" href="preview/enUS-searchFeatures.ftl" />
   <link rel="localization" href="preview/interventions.ftl" />
 #ifdef NIGHTLY_BUILD
+  <link rel="localization" href="browser/shopping.ftl"/>
   <link rel="localization" href="preview/shopping.ftl"/>
 #endif
 
