Bug 1851651 - Remove navigator-toolbox-background. r=dao
Differential Revision: https://phabricator.services.mozilla.com/D187485

--- a/browser/base/content/navigator-toolbox.inc.xhtml
+++ b/browser/base/content/navigator-toolbox.inc.xhtml
@@ -2,14 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-<!--
-  This box allows a negative margin-top to slide the toolbox off screen in
-  fullscreen layout.
-  TODO(emilio, bug 1851651): The original use-case for this is gone, try to
-  remove this.
--->
-<box id="navigator-toolbox-background">
-<toolbox id="navigator-toolbox" flex="1">
+<toolbox id="navigator-toolbox">
 
   <vbox id="titlebar">
     <!-- Menu -->
@@ -727,4 +720,3 @@
                    data-l10n-id="navbar-library"/>
   </html:template>
 </toolbox>
-</box>
