Bug 1849255 - [devtools] Handle ::placeholder pseudo-element's ignored properties in inactive CSS. r=devtools-reviewers,fluent-reviewers,nchevobbe.
Differential Revision: https://phabricator.services.mozilla.com/D186742

--- a/devtools/server/tests/chrome/test_inspector-inactive-property-helper.html
+++ b/devtools/server/tests/chrome/test_inspector-inactive-property-helper.html
@@ -57,6 +57,7 @@ SimpleTest.waitForExplicitFinish();
     "margin-padding.mjs",
     "max-min-width-height.mjs",
     "place-items-content.mjs",
+    "placeholder-pseudo-element.mjs",
     "positioned.mjs",
     "scroll-padding.mjs",
     "vertical-align.mjs",
