--- a/browser/base/content/main-popupset.inc.xhtml
+++ b/browser/base/content/main-popupset.inc.xhtml
@@ -417,6 +417,8 @@
     <hbox id="ctrlTab-showAll-container" pack="center"/>
   </panel>
 
+  <html:tab-preview id="tabbrowser-tab-preview" hidden="true" />
+
   <html:template id="pageActionPanelTemplate">
     <panel id="pageActionPanel"
            class="cui-widget-panel panel-no-padding"
