Bug 1842175 - [devtools] Handle ::first-letter pseudo-element's ignored properties in inactive CSS. r=devtools-reviewers,fluent-reviewers,flod,nchevobbe.
Differential Revision: https://phabricator.services.mozilla.com/D186493

--- a/devtools/server/tests/chrome/test_inspector-inactive-property-helper.html
+++ b/devtools/server/tests/chrome/test_inspector-inactive-property-helper.html
@@ -46,6 +46,7 @@ SimpleTest.waitForExplicitFinish();
   const testFiles = [
     "align-content.mjs",
     "border-image.mjs",
+    "first-letter-pseudo-element.mjs",
     "first-line-pseudo-element.mjs",
     "flex-grid-item-properties.mjs",
     "float.mjs",
