--- a/testing/web-platform/tests/css/css-properties-values-api/var-reference-registered-properties.html
+++ b/testing/web-platform/tests/css/css-properties-values-api/var-reference-registered-properties.html
@@ -145,6 +145,14 @@ test(function(){
     element.style = '';
 }, 'Values are absolutized when substituting into properties with universal syntax');
 
+test(function(){
+    let name = generate_property('<length>');
+    let unregistered = '--unregistered'
+    element.style = `${name}: red; ${unregistered}: var(${name})`
+    let computedStyle = getComputedStyle(element);
+    assert_equals(computedStyle.getPropertyValue(unregistered), '');
+}, 'Invalid values for registered properties are serialized as the empty string')
+
 function test_valid_fallback(syntax, value, fallback) {
     test(function(){
         let name = generate_property(syntax);
