--- a/editor/libeditor/tests/test_doc_scrollbar_toggled_designMode_on_mousedown.html
+++ b/editor/libeditor/tests/test_doc_scrollbar_toggled_designMode_on_mousedown.html
@@ -29,19 +29,33 @@ https://bugzilla.mozilla.org/show_bug.cgi?id=620906
 
 /** Test for Bug 620906 **/
 SimpleTest.waitForExplicitFinish();
-addLoadEvent(function() {
-  var iframe = document.querySelector("iframe");
+SimpleTest.waitForFocus(async () => {
+  const iframe = document.querySelector("iframe");
   is(iframe.contentWindow.scrollY, 0, "Sanity check");
-  var rect = iframe.getBoundingClientRect();
-  setTimeout(function() {
-    var onscroll = function() {
-      iframe.contentWindow.removeEventListener("scroll", onscroll);
+  const rect = iframe.getBoundingClientRect();
+  const waitForTick = () => {
+    return new Promise(resolve => requestAnimationFrame(
+      () => requestAnimationFrame(resolve))
+    );
+  };
+  await waitForTick();
+  let scrollEventFired = false;
+  iframe.contentWindow.addEventListener("scroll", () => {
+    scrollEventFired = true;
+  }, {once: true});
+  for (let i = 0; i < 10; i++) {
+    synthesizeMouse(iframe, rect.width - 4, rect.height / 2, { type: "mousemove" });
+    synthesizeMouse(iframe, rect.width - 5, rect.height / 2, { type: "mousemove" });
+    synthesizeMouse(iframe, rect.width - 5, rect.height / 2, {});
+    await waitForTick();
+    if (scrollEventFired) {
       isnot(iframe.contentWindow.scrollY, 0, "The scrollbar should work");
       SimpleTest.finish();
-    };
-    iframe.contentWindow.addEventListener("scroll", onscroll);
-    synthesizeMouse(iframe, rect.width - 5, rect.height / 2, {});
-  }, 0);
+      return;
+    }
+  }
+  ok(false, "The scrollbar didn't work");
+  SimpleTest.finish();
 });
 
 </script>
